<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.android.musicplayer.MainActivity">
  <TextView
      android:id="@+id/songName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/app_name"
      android:textSize="25sp" />

   <ImageView
       android:id="@+id/songImage"
       android:layout_width="150dp"
       android:layout_height="150dp"
       android:layout_gravity="center_horizontal"
       android:src="@drawable/orblee"/>
    <TextView
        android:id="@+id/songDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/duration"
        android:textSize="25sp" />
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backforward"
            android:src="@android:drawable/ic_media_rew"/>
        <ImageButton
            android:id="@+id/btn_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pause"
            android:src="@android:drawable/ic_media_pause"/>
        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="play"
            android:src="@android:drawable/ic_media_play"/>
        <ImageButton
            android:id="@+id/btn_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="forward"
            android:src="@android:drawable/ic_media_ff"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/albums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#333333"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/albums"
            android:textAllCaps="true"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#333333"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/songs"
            android:textAllCaps="true"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/artists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#333333"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/artists"
            android:textAllCaps="true"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#333333"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/playlists"
            android:textAllCaps="true"
            android:textSize="15sp"/>
    </LinearLayout>

</LinearLayout>
